--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -21,7 +21,7 @@
                         <p class="text-center forgot-pass"><a href="">¿Olvidaste la contaseña?</a></p>
 
                         <div class="text-center" style="padding-top: 40px;">
-                            <button type="submit" class="btn btn-block btn-login-ca" ng-disabled="loginForm.$invalid">
+                            <button type="submit" class="btn btn-yellow1" ng-disabled="loginForm.$invalid">
                                     Iniciar sesión <span ng-if="Contact.busy"><i
                                     class="fa fa-spinner fa-spin"></i></span>
                             </button>
@@ -80,7 +80,7 @@
 
 
                         <div class="text-center" style="padding-top: 15px;">
-                            <button type="submit" class="btn btn-block btn-login-ca"
+                            <button type="submit" class="btn btn-yellow1"
                                     ng-disabled="registerForm.$invalid">
                                 Regístrarme <span ng-if="Access.busy"><i
                                     class="fa fa-spinner fa-spin"></i></span>
