--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -5,6 +5,7 @@ cablack = #323232
 cagreen = #1887ce
 cagreenh = #7e1a1d
 primary = #555555
+monsyellow = #ffa500
 
 i 
   vertical-align: middle;
@@ -468,7 +469,7 @@ header
   font-weight 100
   color #565656
 .dividerw
-  border 1px solid #ccc
+  border 1px solid #ddd
   margin-top 0
 .header-title
   background cagreen
@@ -914,10 +915,10 @@ header
     p
       font-weight 500
 .box-blog
-  padding-bottom 30px !important
   .btn-red
     color white !important
   .blog-container
+    padding 20px
     text-align left
     height auto
     text-transform normal
@@ -935,15 +936,16 @@ header
 
 .box-white
   background-color white
-  padding 20px 0
+  //padding 20px 0
   transition all 0.5s ease
   color #555
-  border-bottom 1px solid #eee
+  border-bottom 2px solid #ddd
   h4
     padding 10px 0
     font-size 16px
     height 40px
   .simple-header
+    padding 0
     .img-box
       background-size contain
       height 250px
@@ -1479,6 +1481,22 @@ footer
     font-weight 300
     border-radius 2px
 
+.btn-yellow1
+  display inline-block
+  color white
+  font-weight 300
+  border-radius 0
+  background monsyellow
+  border 1px solid monsyellow
+  &:hover, &:focus
+    background-color monsyellow !important
+    display inline-block
+    color white
+    font-weight 300
+    border-radius 0
+    border 1px solid monsyellow
+
+
 .btn-yellow
   background #cbae00
   display inline-block
@@ -1810,10 +1828,20 @@ footer
   display none
 
 /*transition tabs*/
-.nav-tabs.nav-justified > .active > a, .nav-tabs.nav-justified > .active > a:hover, .nav-tabs.nav-justified > .active > a:focus
-  color #c10514
+.tab-pane
+  border none !important
 .nav-tabs.nav-justified > li > a
-  font-size 24px
+  border-bottom 1px solid #ccc
+.nav-tabs.nav-justified > .active > a
+  border-bottom 2px solid monsyellow !important
+.nav-tabs.nav-justified > .active > a, .nav-tabs.nav-justified > .active > a:hover, .nav-tabs.nav-justified > .active > a:focus
+  color monsyellow
+  background whitesmoke
+  border-right none
+  border-left none
+  border-top none
+.nav-tabs.nav-justified > li > a
+  font-size 18px
   color #555
   text-align left
 .tab-pane
@@ -1860,6 +1888,8 @@ footer
   background-size cover
   background-position center center
 
+.box-footer
+  padding-top 35px
 .height-title
   height auto
 
