--- a/app/css/main.css
+++ b/app/css/main.css
@@ -540,7 +540,7 @@ header {
   color: #565656;
 }
 .dividerw {
-  border: 1px solid #ccc;
+  border: 1px solid #ddd;
   margin-top: 0;
 }
 .header-title {
@@ -1079,13 +1079,11 @@ color
 .list-sidebar li > a p {
   font-weight: 500;
 }
-.box-blog {
-  padding-bottom: 30px !important;
-}
 .box-blog .btn-red {
   color: #fff !important;
 }
 .box-blog .blog-container {
+  padding: 20px;
   text-align: left;
   height: auto;
   text-transform: normal;
@@ -1106,15 +1104,17 @@ color
 }
 .box-white {
   background-color: #fff;
-  padding: 20px 0;
   transition: all 0.5s ease;
   color: #555;
-  border-bottom: 1px solid #eee;
+  border-bottom: 2px solid #ddd;
 }
 .box-white h4 {
   padding: 10px 0;
   font-size: 16px;
   height: 40px;
+}
+.box-white .simple-header {
+  padding: 0;
 }
 .box-white .simple-header .img-box {
   background-size: contain;
@@ -1766,6 +1766,23 @@ footer .contact-sty .download-app > i:hover {
   font-weight: 300;
   border-radius: 2px;
 }
+.btn-yellow1 {
+  display: inline-block;
+  color: #fff;
+  font-weight: 300;
+  border-radius: 0;
+  background: #ffa500;
+  border: 1px solid #ffa500;
+}
+.btn-yellow1:hover,
+.btn-yellow1:focus {
+  background-color: #ffa500 !important;
+  display: inline-block;
+  color: #fff;
+  font-weight: 300;
+  border-radius: 0;
+  border: 1px solid #ffa500;
+}
 .btn-yellow {
   background: #cbae00;
   display: inline-block;
@@ -2141,13 +2158,26 @@ footer .contact-sty .download-app > i:hover {
 .owl-nav {
   display: none;
 }
+.tab-pane {
+  border: none !important;
+}
+.nav-tabs.nav-justified > li > a {
+  border-bottom: 1px solid #ccc;
+}
+.nav-tabs.nav-justified > .active > a {
+  border-bottom: 2px solid #ffa500 !important;
+}
 .nav-tabs.nav-justified > .active > a,
 .nav-tabs.nav-justified > .active > a:hover,
 .nav-tabs.nav-justified > .active > a:focus {
-  color: #c10514;
+  color: #ffa500;
+  background: #f5f5f5;
+  border-right: none;
+  border-left: none;
+  border-top: none;
 }
 .nav-tabs.nav-justified > li > a {
-  font-size: 24px;
+  font-size: 18px;
   color: #555;
   text-align: left;
 }
@@ -2202,6 +2232,9 @@ footer .contact-sty .download-app > i:hover {
   height: 340px;
   background-size: cover;
   background-position: center center;
+}
+.box-footer {
+  padding-top: 35px;
 }
 .height-title {
   height: auto;
