--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -4,7 +4,9 @@
             <div class="col-md-9 col-sm-9">
                 <div class="content-pages" infinite-scroll='Post.getMorePosts()'
                      infinite-scroll-disabled='Post.busy || !Post.next || Post.loadPosts'>
-                    <div class="row">
+                    <div class="">
+                        <h4 class="text-left">Noticias</h4>
+                        <hr class="dividerw">
                         <div class="box-white col-sm-12 box-blog" ng-repeat="entry in Post.list">
                             <a post-link="{ link: {url: entry.link, target: '_blank'} }"
                                ui-sref="post_detail({slug: entry.slug})" title="{{ entry.title }}">
@@ -12,13 +14,11 @@
                                     <div class="img-box" style="background-image: url('{{ entry.featuredImage.url }}')"></div>
                                 </div>
                                 <div class="blog-container col-md-8 col-sm-8">
-                                    <div class="height-title"><h3>{{ entry.title }}</h3></div>
-                                    <div class="height-summary"><p>{{ entry.excerpt| characters:100 }}</p></div>
+                                    <div class="height-title"><h4>{{ entry.title }}</h4></div>
+                                    <div class="height-summary"><p>{{ entry.excerpt| characters:200 }}</p></div>
                                     <div class="box-footer">
-                                        <p><span><i class="fa fa-calendar-"></i></span>
-                                            {{ entry.createdAt | date : shortDate }} </p>
+                                        <button class="btn btn-yellow1">Ver más <i class="fa fa-angle-right"></i></button>
                                     </div>
-                                    <button class="btn btn-reg">Ver más <i class="fa fa-angle-right"></i></button>
                                 </div>
                             </a>
                         </div>
