--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -20,7 +20,7 @@ i
 
 .alignleft
   float left
-  margin-right 15px
+  margin-right 15px 
 
 .alignright
   float right
@@ -578,21 +578,47 @@ header
       padding 35px 20px
       text-align left
       color #fff
+.box-prod
+  background white
+  padding 20px 0
+  .img-prod
+    padding-bottom 15px
+  .box-container
+    height 45px   !important
+    p
+      font-size 18px
+  .prod-descrip
+    color #717171
+    height 65px
+    font-family  'PT Sans Narrow', sans-serif
+    padding 15px 10% 0
+    margin-bottom 20px
+    font-weight 100
+  .prod-price
+    color cablack
 
 .products
   padding 70px 0
   background-color white
-  .box-products
-    .prod-title
-      h3
-        font-weight 600
-        color catext
-    .prod-entry
-      padding 15px 19% 10px
-      margin-bottom 50px
+  .box-prod
+    background white
+    padding 20px 0
+    .img-prod
+      padding-bottom 15px
+    .box-container
+      height 45px   !important
       p
-        color catext2
-        font-size 20px
+        font-size 18px
+    .prod-descrip
+      color #717171
+      height 65px
+      font-family  'PT Sans Narrow', sans-serif
+      padding 15px 10% 0
+      margin-bottom 20px
+      font-weight 100
+    .prod-price
+      color cablack
+
 .label-status
   margin-bottom 10px
 .list-social-media
@@ -605,18 +631,7 @@ header
     padding-left 15px
     &:hover
       color cagreen
-.box-prod
-  background rgba(254,254,254,1);
-  background -moz-linear-gradient(top, rgba(254,254,254,1) 0%, rgba(254,254,254,1) 51%, rgba(223,223,223,1) 100%);
-  background -webkit-gradient(left top, left bottom, color-stop(0%, rgba(254,254,254,1)), color-stop(51%, rgba(254,254,254,1)), color-stop(100%, rgba(223,223,223,1)));
-  background -webkit-linear-gradient(top, rgba(254,254,254,1) 0%, rgba(254,254,254,1) 51%, rgba(223,223,223,1) 100%);
-  background -o-linear-gradient(top, rgba(254,254,254,1) 0%, rgba(254,254,254,1) 51%, rgba(223,223,223,1) 100%);
-  background -ms-linear-gradient(top, rgba(254,254,254,1) 0%, rgba(254,254,254,1) 51%, rgba(223,223,223,1) 100%);
-  background linear-gradient(to bottom, rgba(254,254,254,1) 0%, rgba(254,254,254,1) 51%, rgba(223,223,223,1) 100%);
-  padding 20px 0
-  border-bottom 1px solid #C1C1C0
-  .img-prod
-    padding-bottom 15px
+
   .prod-descrip
     color #717171
     height 65px
