--- a/app/css/main.css
+++ b/app/css/main.css
@@ -677,21 +677,57 @@ header {
   text-align: left;
   color: #fff;
 }
+.box-prod {
+  background: #fff;
+  padding: 20px 0;
+}
+.box-prod .img-prod {
+  padding-bottom: 15px;
+}
+.box-prod .box-container {
+  height: 45px !important;
+}
+.box-prod .box-container p {
+  font-size: 18px;
+}
+.box-prod .prod-descrip {
+  color: #717171;
+  height: 65px;
+  font-family: 'PT Sans Narrow', sans-serif;
+  padding: 15px 10% 0;
+  margin-bottom: 20px;
+  font-weight: 100;
+}
+.box-prod .prod-price {
+  color: #323232;
+}
 .products {
   padding: 70px 0;
   background-color: #fff;
 }
-.products .box-products .prod-title h3 {
-  font-weight: 600;
-  color: #565656;
+.products .box-prod {
+  background: #fff;
+  padding: 20px 0;
 }
-.products .box-products .prod-entry {
-  padding: 15px 19% 10px;
-  margin-bottom: 50px;
+.products .box-prod .img-prod {
+  padding-bottom: 15px;
 }
-.products .box-products .prod-entry p {
-  color: #676767;
-  font-size: 20px;
+.products .box-prod .box-container {
+  height: 45px !important;
+}
+.products .box-prod .box-container p {
+  font-size: 18px;
+}
+.products .box-prod .prod-descrip {
+  color: #717171;
+  height: 65px;
+  font-family: 'PT Sans Narrow', sans-serif;
+  padding: 15px 10% 0;
+  margin-bottom: 20px;
+  font-weight: 100;
+}
+.products .box-prod .prod-price {
+  color: #323232;
 }
 .label-status {
   margin-bottom: 10px;
@@ -710,21 +746,7 @@ header {
 .list-social-media a:hover {
   color: #1887ce;
 }
-.box-prod {
-  background: #fefefe;
-  background: -moz-linear-gradient(top, #fefefe 0%, #fefefe 51%, #dfdfdf 100%);
-  background: -webkit-gradient(left top, left bottom, color-stop(0%, #fefefe), color-stop(51%, #fefefe), color-stop(100%, #dfdfdf));
-  background: -webkit-linear-gradient(top, #fefefe 0%, #fefefe 51%, #dfdfdf 100%);
-  background: -o-linear-gradient(top, #fefefe 0%, #fefefe 51%, #dfdfdf 100%);
-  background: -ms-linear-gradient(top, #fefefe 0%, #fefefe 51%, #dfdfdf 100%);
-  background: linear-gradient(to bottom, #fefefe 0%, #fefefe 51%, #dfdfdf 100%);
-  padding: 20px 0;
-  border-bottom: 1px solid #c1c1c0;
-}
-.box-prod .img-prod {
-  padding-bottom: 15px;
-}
-.box-prod .prod-descrip {
+.list-social-media .prod-descrip {
   color: #717171;
   height: 65px;
   font-family: 'Poppins', sans-serif;
@@ -732,7 +754,7 @@ header {
   margin-bottom: 20px;
   font-weight: 100;
 }
-.box-prod .prod-price {
+.list-social-media .prod-price {
   color: #323232;
 }
 .register {
