--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -181,7 +181,7 @@ body
   .shopping-cart
     font-size 18px
     padding-left 20px 
-    margin-top 8px
+    margin-top 3px
     a
       font-size 24px
       font-weight 100
@@ -250,7 +250,7 @@ header
   -ms-transition height 0.3s
   -o-transition height 0.3s
   transition height 0.3s
-  box-shadow 0 7px 10px rgba(0,0,0,0.3)
+  box-shadow 0 0px 23px rgba(0,0,0,0.1)
 .header
   text-align center
 
@@ -314,6 +314,9 @@ header
     font-size 22px
     font-weight bold
     color #aaaaaa
+#section-prom
+  margin-top 80px
+  margin-bottom 40px    
 #us
   padding 60px 0
   background-size cover
@@ -386,8 +389,10 @@ header
 .slider-img
   background-position top center
   background-size 100%
-  height 500px
+  height 515px
   background-repeat no-repeat
+.box-image-promo
+  padding-bottom 15px
 .bg-inner
   width 100%
   position absolute
@@ -585,9 +590,9 @@ header
   .img-prod
     padding-bottom 15px
   .box-container
-    height 45px   !important
+    height 80px !important
     p
-      font-size 18px
+      font-size 16px
   .prod-descrip
     color #717171
     height 65px
@@ -607,9 +612,9 @@ header
     .img-prod
       padding-bottom 15px
     .box-container
-      height 45px   !important
+      height 80px !important
       p
-        font-size 18px
+        font-size 16px
     .prod-descrip
       color #717171
       height 65px
@@ -1530,21 +1535,21 @@ footer
     font-weight 700
     border-radius 0px
 .btn-orange
-  background #cb6133
+  background #FF7300
   display inline-block
   padding 10px 15px
   color white !important
   font-weight 300
-  border 1px solid #cb6133
+  border 1px solid #FF7300
   -webkit-transition all ease 0.1s
   -moz-transition all ease 0.1s
   -ms-transition all ease 0.1s
   -o-transition all ease 0.1s
   transition all ease 0.1s
-  border-radius 30px
+  border-radius 2px
   &:hover, &:focus
-    border 1px solid #9b4a27
-    background #9b4a27
+    border 1px solid #BC5508
+    background #BC5508
     display inline-block
     padding 10px 15px
     color #fff
@@ -1861,10 +1866,7 @@ footer
   text-align left
 .tab-pane
   padding 15px
-  border-left 1px solid #ddd
-  border-right 1px solid #ddd
-  border-bottom 1px solid #ddd
-  background-color white
+  background-color transparent
 #products
   padding 0
   text-aling center
