--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,55 +1,73 @@
-<!-- slider -->
-<div id="carouse-principal" class="carousel slide">
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
-        <uib-carousel interval="5000" template-url="/templates/partials/carousel.html">
-            <uib-slide ng-repeat="slide in Home.mainSlider">
-                <a post-link="{ link: {url: slide.link, target: '_self'} }">
-                    <div class="slider-img" style="background-image:url('{{ slide.featuredImage.url }}');"></div>
-                </a>
-            </uib-slide>
-        </uib-carousel>
+<div id="section-prom" class="container">
+    <div class="col-sm-9">
+        <div id="carouse-principal" class="carousel slide">
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+                <uib-carousel interval="5000" template-url="/templates/partials/carousel.html">
+                    <uib-slide ng-repeat="slide in Home.mainSlider">
+                        <a post-link="{ link: {url: slide.link, target: '_self'} }">
+                            <div class="slider-img" style="background-image:url('{{ slide.featuredImage.url }}');"></div>
+                        </a>
+                    </uib-slide>
+                </uib-carousel>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-3 no-padding">
+       <div class="box-image-promo" ng-repeat="promo in Home.promoHome">
+            <a post-link="{ link: {url: promo.link, target: '_self'} }">
+                <img src="{{ promo.featuredImage.url }}" alt="Promotions">
+            </a>
+       </div>
     </div>
 </div>
+<!-- slider -->
+
 
 <section class="products">
     <div class="container">
-        <div class="box-products" ng-controller="ShoppingCtrl as Shop">
-            <div class="row text-center">
-                <div class="prod-title">
-                    <h3>Conoce nuestros productos</h3>
-                </div>
-                <div class="prod-entry">
-                    <p>Somos la mejor opción en equipo de automatización industrial con
-                        tecnología de punta al mejor precio, capacitando y apoyando a la industría nacional.</p>
-                </div>
+        <div class="row text-center">
+            <div class="prod-title">
+                <h3>Conoce nuestros productos</h3>
             </div>
-            <div class="row text-center">
-                <div class="col-sm-4 col-md-3" ng-repeat="product in Home.products">
-                    <div class="box-prod">
-                        <a ui-sref="product-detail({slug:product.slug})" title="Ver detalles del producto">
-                            <div class="bg-prod" style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default}}')"></div>
-                        </a>
-                        <div class="box-container no-padding container-fluid">
-                            <div class="col-sm-12 no-pd-l text-center">
-                                <p>{{product.name}}</p>
+            <div class="prod-entry">
+                <p> Nosotros creamos un ambiente saludable, amigable, y funcional tanto en la industria <br> como 
+                en el hogar para nuestros animales de compañía.</p>
+            </div>
+        </div>
+        <div class="col-sm-9">
+            <div class="box-products" ng-controller="ShoppingCtrl as Shop">
+                <div class="row text-center">
+                    <div class="col-sm-4" ng-repeat="product in Home.products">
+                        <div class="box-prod">
+                            <a ui-sref="product-detail({slug:product.slug})" title="Ver detalles del producto">
+                                <div class="bg-prod" style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default}}')"></div>
+                            </a>
+                            <div class="box-container no-padding container-fluid">
+                                <div class="col-sm-12 no-pd-l text-center">
+                                    <p>{{product.name}}</p>
+                                    <h4>{{ product.price | currency }}</h4>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="container-fluid no-padding">
+                                <div class="col-xs-6 no-pd-l">
+                                    <a class="btn btn-gray-clear btn-block"  ui-sref="product-detail({slug:product.slug})">Ver más</a>
+                                </div>
+                                <div class="col-xs-6 no-pd-r">
+                                    <button class="btn btn-orange btn-block"
+                                    ng-click="Shop.setItem({id: product.id, image: product.featuredImage.url, name: product.name, price: product.price, qty: 1}, 1)"
+                                    ng-disabled="Shop.itemInCart(product)">Cotizar</button>
+                                </div>
                             </div>
                         </div>
-                        <hr>
-                        <div class="container-fluid no-padding">
-                            <div class="col-xs-6 no-pd-l">
-                                <a class="btn btn-gray-clear btn-block"  ui-sref="product-detail({slug:product.slug})">Ver más</a>
-                            </div>
-                            <div class="col-xs-6 no-pd-r">
-                                <button class="btn btn-red btn-block"
-                                ng-click="Shop.setItem({id: product.id, image: product.featuredImage.url, name: product.name, price: product.price, qty: 1}, 1)"
-                                ng-disabled="Shop.itemInCart(product)">Cotizar</button>
-                            </div>
-                        </div>
-                    </div>
 
+                    </div>
                 </div>
             </div>
+        </div>
+        <div class="col-sm-3">
+            <h3>Twitter here</h3>
         </div>
     </div>
 </section>
